# samplelib

./: CMakeLists.txt  README.md  conanfile.txt  samplelib_config.h.in
inc/: samplelib.h
src/: samplelib.cxx
tst/: CMakeLists.txt  samplelib_test.cxx
